Fixed overflow of long messages in modal

--- a/app/scripts/modules/core/src/styleguide/src/styles/app.css
+++ b/app/scripts/modules/core/src/styleguide/src/styles/app.css
@@ -39,3 +39,7 @@
       --is-desktop: true;
     }
   }
+
+  .break-words {
+    word-break: break-word;
+  }
